ecmascript/parser/tests/typescript-errors/types/tuple-optional-invalid/input.ts.stderr
error: A required element cannot follow an optional element.
 --> $DIR/tests/typescript-errors/types/tuple-optional-invalid/input.ts:1:8
  |
1 | let x: [string?, number]
  |        ^^^^^^^^^^^^^^^^^

